plugins {
    id 'java'
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.0.13'
}

group 'org.LostCityInterfaceEditor'
version '4.0'

repositories {
    mavenCentral()
}

ext {
    junitVersion = '5.10.0'
}

sourceCompatibility = '21'
targetCompatibility = '21'

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}

application {
    mainModule = 'org.lostcityinterfaceeditor'
    mainClass = 'org.lostcityinterfaceeditor.Launcher'
    applicationDefaultJvmArgs = [
            '--add-opens', 'javafx.graphics/javafx.scene.effect=com.gluonhq.attach.util',
            '--add-exports', 'javafx.graphics/javafx.scene.effect=ALL-UNNAMED'
    ]
}

javafx {
    version = '21'
    modules = ['javafx.controls', 'javafx.fxml']
}

dependencies {
    implementation('org.controlsfx:controlsfx:11.1.2')

    testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")
}

test {
    useJUnitPlatform()
}

jar {
    manifest {
        attributes 'Main-Class': 'org.lostcityinterfaceeditor.Launcher'
    }

    from {
        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
    } {
        exclude 'module-info.class'
        exclude 'META-INF/*.SF', 'META-INF/*.DSA', 'META-INF/*.RSA'
    }
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE

    archiveBaseName = "${project.name}-fat"
    archiveClassifier = 'fat'
}